Fix text size adjustment on Safari

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -722,6 +722,11 @@ body {
   padding: var(--base) calc(var(--base) / 2);
   margin: 0 auto;
   max-width: calc(var(--base) * 25);
+
+  text-size-adjust: 100%; 
+  -ms-text-size-adjust: 100%; 
+  -moz-text-size-adjust: 100%; 
+  -webkit-text-size-adjust: 100%;
 }
 
 ::selection {
